# Homalos

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  README_EN.md  SYSTEM_PLAN.md  build.py  main.py  meson.build  pyproject.toml  start.py  temp_page.html  test_page.html  帮助.md  未来设计.md  简化设计.md  设计构思.md  问题修复历史.md
config/: global_config.yaml  instrument_exchange_id.json  system.yaml  system.yaml.example  test_system.yaml
config_files/: broker_config.json  global_config.yaml
data/: trading.db
docker/: Dockerfile
docs/: PROJECT_COMPLETION_SUMMARY.md  RESTful API设计指南：构建高效、可扩展和易用的API.md  SYSTEM_PLAN.md  strategy_development_guide.md  帮助.md  设计构思.md  设计构思1.md  设计构思2.md  问题修复历史.md
src/: __init__.py  __version__.py  gateway_helper.py  main_engine_runner.py  market_data_gateway_runner.py  market_data_service.py
src/config/: __init__.py  config_manager.py  constant.py  constants.py  global_config.py  global_var.py  params.py  path.py  setting.py
src/config/project_files/: broker_config.json  global_config.yaml  instrument_exchange_id.json
src/core/: __init__.py  base_gateway.py  config_manager.py  engine.py  event.py  event_bus.py  event_engine.py  event_type.py  gateway.py  logger.py  object.py  service_registry.py  trading_engine.py
src/ctp/: __init__.py  build.py  meson.build
src/ctp/api/: __init__.py  ctpmd.cp312-win_amd64.pyd  ctptd.cp312-win_amd64.pyd
src/ctp/api/generator/: ctp_constant.py  ctp_struct.py  ctp_typedef.py  generate_api_functions.py  generate_data_type.py  generate_struct.py
src/ctp/api/src_ctp/ctpmd/: ctpmd.cpp  ctpmd.h  dllmain.cpp
src/ctp/api/src_ctp/ctptd/: ctptd.cpp  ctptd.h
src/ctp/gateway/: __init__.py  ctp_gateway.py  ctp_gateway_helper.py  ctp_mapping.py  market_data_gateway.py  order_trading_gateway.py
src/messaging/: zmq_event_engine.py
src/services/: __init__.py  data_service.py  performance_monitor.py  trading_engine.py
src/strategies/: __init__.py  base_strategy.py  example_strategy.py  grid_trading_strategy.py  minimal_strategy.py  moving_average_strategy.py  strategy_factory.py  strategy_template.py
src/tts/: __init__.py  build.py  meson.build
src/tts/api/: __init__.py  tts_constant.py  ttsmd.cp312-win_amd64.pyd  ttstd.cp312-win_amd64.pyd
src/tts/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py  tts_struct.py  tts_typedef.py
src/tts/api/src_tts/ttsmd/: ttsmd.cpp  ttsmd.h
src/tts/api/src_tts/ttstd/: ttstd.cpp  ttstd.h
src/tts/gateway/: __init__.py  market_data_gateway.py  order_trading_gateway.py  tts_gateway.py  tts_gateway_helper.py  tts_mapping.py
src/util/: __init__.py  file_helper.py  runner_common.py  setting.py  utility.py
src/util/i18n/: __init__.py
src/util/logger/: __init__.py
src/util/path/: __init__.py  get_path.py
src/web/: __init__.py  web_server.py
src/web/static/: index.html
src/web/static/css/: app.css
src/web/static/css/components/: strategy.css
src/web/static/js/: app.js
src/web/static/js/components/: ComponentRegistry.js  Dashboard.js  LogPanel.js  StrategyDialog.js  StrategyTable.js
src/web/static/js/services/: api.js  websocket.js
src/web/static/js/store/: state.js
test/: __init__.py  test_bar_generation.py  test_config_manager.py  test_ctp_bar_realtime.py  test_ctp_market_gateway.py  test_ctp_realtime_integration.py  test_event_monitors.py  test_gateway_state_management.py  test_performance_framework.py  test_strategy_factory..py  test_trading_engine_integration.py
tests/: __init__.py  quick_data_flow_test.py  test_config_manager.py  test_ctp_simple.py  test_data_service.py  test_event_monitors.py  test_performance_framework.py  test_service_registry.py  test_strategy_factory..py  test_tts_simple.py
